--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
 		"webpack-stream": "latest"
 	},
 	"dependencies": {
-		"simplebar": "latest"
+		"simplebar": "latest",
+		"wnumb": "^1.2.0"
 	}
 }
